  * (Build-)Depend on libgles-dev instead of libgles2-mesa-dev.
    (Closes: #972190)

  [ Clayton Craft ]
  * debian: enable touchscreen support with libts

  [ Simon McVittie ]
  * d/p/no-libdir.patch: Expand description.
    Among other things this explains why it isn't an upstreamable change.

  [ Fabian Greffrath ]
  * enable HIDAPI for low level joystick drivers (Closes: #975989)

 -- Simon McVittie <smcv@debian.org>  Mon, 04 Jan 2021 14:29:01 +0000

libsdl2 (2.0.12+dfsg1-4) unstable; urgency=medium

  * Team upload
  * Add graphwiz to Build-Depends-Indep for the dot command.

 -- Fabian Greffrath <fabian@debian.org>  Sat, 03 Oct 2020 22:53:14 +0200

libsdl2 (2.0.12+dfsg1-3) unstable; urgency=medium

  * Team upload
  * Add libdrm-dev to Build-Depends to get the kmsdrm video driver
    working, thanks Matthew Harm Bekkema (Closes: #971529).

 -- Fabian Greffrath <fabian@debian.org>  Sat, 03 Oct 2020 22:11:05 +0200

libsdl2 (2.0.12+dfsg1-2) unstable; urgency=medium

  * Team upload

  [ Steve Langasek ]
  * use clang:native instead of clang in autopkgtests, to make
    them cross-testing friendly

  [ RALOVICH, Kristof ]
  * debian: enable kmsdrm video driver as well

 -- Fabian Greffrath <fabian@debian.org>  Tue, 18 Aug 2020 11:15:22 +0200

libsdl2 (2.0.12+dfsg1-1) unstable; urgency=medium

  * Team upload
  * Upload v2.0.12 to unstable
  * d/tests/build: Exercise compilation using clang
  * d/rules: Provide compatibility symlinks to begin_code.h, close_code.h.
    If a project that (incorrectly?) #includes <SDL2/SDL_foo.h>, such as
    jag_0.3.5-5, is compiled with gcc, our symlink to SDL_platform.h is
    sufficient to make it work. However, when compiled with clang, we need
    to provide symlinks to everything that is required by SDL_config.h,
    recursively, due to different symlink behaviour between gcc and clang.
    (This is a variation on #952066.)
  * d/tests: Exercise the #952066-like situation with clang
